force-app/main/default/objects/Locations__c/fields/Account_Location__c.field-meta.xml
<CustomField>
        <fullName>Account_Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>AccLocations</relationshipLabel>
        <relationshipName>AccLocations</relationshipName>
        <type>Lookup</type>
    </CustomField>