force-app/main/default/objects/Locations__c/fields/AccPhone__c.field-meta.xml
<CustomField>
        <fullName>AccPhone__c</fullName>
        <label>AccPhone</label>
        <type>Phone</type>
    </CustomField>