force-app/main/default/objects/Locations__c/fields/LocationEmail__c.field-meta.xml
<CustomField>
        <fullName>LocationEmail__c</fullName>
        <label>LocationEmail</label>
        <type>Email</type>
    </CustomField>