force-app/main/default/objects/Locations__c/fields/Postalcode__c.field-meta.xml
<CustomField>
        <fullName>Postalcode__c</fullName>
        <label>Postalcode</label>
        <length>10</length>
        <type>Text</type>
    </CustomField>